# crud_fastapi

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: Dockerfile  requirements.txt
src/app/: db.py  main.py
src/app/api/: crud.py  notes.py
src/tests/: conftest.py  test_notes.py
