[tool.poetry]
name = "crud-fastapi"
version = "0.1.0"
description = "Backend to store notes using asynchronous data manipulation with FastAPI, Databases, SQLAlchemy and PostgreSQL"
authors = ["Pedro Nunes <pedrounes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
asyncpg = "^0.24.0"
databases = {extras = ["postgresql"], version = "^0.5.3"}
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]
requests = "^2.26.0"
pytest = "^6.2.5"
flake8 = "^4.0.1"
isort = "^5.10.0"
black = "^21.10b0"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
